VS2005/Common/VeCADAPI/CadApi.h


//*** end of strings identifiers ************************************



typedef unsigned long VHANDLE;    // pointer to VeCAD object
typedef unsigned long VDWG;       // pointer to VeCAD drawing
typedef unsigned long IDOBJ;      // identifier of VeCAD object

void    CADAPI CadPointPutStyleID    (VHANDLE hEnt, IDOBJ Id);

double  CADAPI CadPointGetX          (VHANDLE hEnt);

void    CADAPI CadPointPutX          (VHANDLE hEnt, double X);

double  CADAPI CadPointGetY          (VHANDLE hEnt);

void    CADAPI CadPointPutY          (VHANDLE hEnt, double Y);

double  CADAPI CadPointGetZ          (VHANDLE hEnt);

void    CADAPI CadPointPutZ          (VHANDLE hEnt, double Z);

void    CADAPI CadPointGetCoord      (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadPointPutCoord      (VHANDLE hEnt, double X, double Y, double Z);

void    CADAPI CadPointGetTextOffset (VHANDLE hEnt, double* pDX, double* pDY, double* pDZ);

void    CADAPI CadPointPutTextOffset (VHANDLE hEnt, double DX, double DY, double DZ);

double  CADAPI CadPointGetTextX      (VHANDLE hEnt);

void    CADAPI CadPointPutTextX      (VHANDLE hEnt, double X);

double  CADAPI CadPointGetTextY      (VHANDLE hEnt);

void    CADAPI CadPointPutTextY      (VHANDLE hEnt, double Y);

void    CADAPI CadPointGetText       (VHANDLE hEnt, TCHAR* szText);

void    CADAPI CadPointPutText       (VHANDLE hEnt, LPCTSTR szText);

double  CADAPI CadPointGetTextAngle  (VHANDLE hEnt);

void    CADAPI CadPointPutTextAngle  (VHANDLE hEnt, double Angle);

double  CADAPI CadPointGetBlockAngle (VHANDLE hEnt);

void    CADAPI CadPointPutBlockAngle (VHANDLE hEnt, double Angle);


/******************************************************************************
* LINE
*******************************************************************************/
VHANDLE CADAPI CadAddLine       (VDWG hDwg, double x1, double y1, double z1, double x2, double y2, double z2);

double  CADAPI CadLineGetX1     (VHANDLE hEnt);

void    CADAPI CadLinePutX1     (VHANDLE hEnt, double X);

double  CADAPI CadLineGetY1     (VHANDLE hEnt);

void    CADAPI CadLinePutY1     (VHANDLE hEnt, double Y);

double  CADAPI CadLineGetZ1     (VHANDLE hEnt);

void    CADAPI CadLinePutZ1     (VHANDLE hEnt, double Z);

double  CADAPI CadLineGetX2     (VHANDLE hEnt);

void    CADAPI CadLinePutX2     (VHANDLE hEnt, double X);

double  CADAPI CadLineGetY2     (VHANDLE hEnt);

void    CADAPI CadLinePutY2     (VHANDLE hEnt, double Y);

double  CADAPI CadLineGetZ2     (VHANDLE hEnt);

void    CADAPI CadLinePutZ2     (VHANDLE hEnt, double Z);

void    CADAPI CadLineGetPoint1 (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadLinePutPoint1 (VHANDLE hEnt, double X, double Y, double Z);

void    CADAPI CadLineGetPoint2 (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadLinePutPoint2 (VHANDLE hEnt, double X, double Y, double Z);


/******************************************************************************
* CIRCLE, ARC, ELLIPSE
*******************************************************************************/
VHANDLE CADAPI CadAddCircle        (VDWG hDwg, double X, double Y, double Z, double Radius);

VHANDLE CADAPI CadAddCircle3P      (VDWG hDwg, double X1, double Y1, double Z, double X2, double Y2, double X3, double Y3);

VHANDLE CADAPI CadAddArc           (VDWG hDwg, double X, double Y, double Z, double Radius, double StartAngle, double ArcAngle);

VHANDLE CADAPI CadAddArc3P         (VDWG hDwg, double X1, double Y1, double Z, double X2, double Y2, double X3, double Y3);

VHANDLE CADAPI CadAddArcCSE        (VDWG hDwg, double Xc, double Yc, double Z, double Xs, double Ys, double Xe, double Ye, BOOL bCCW);

VHANDLE CADAPI CadAddArcSED        (VDWG hDwg, double Xs, double Ys, double Z, double Xe, double Ye, double DirAngle);

VHANDLE CADAPI CadAddArcContinue   (VDWG hDwg, VHANDLE hEnt, double Xe, double Ye, double Z);

VHANDLE CADAPI CadAddEllipse       (VDWG hDwg, double X, double Y, double Z, double RadH, double RadV, double RotAngle);

int     CADAPI CadArcGetType       (VHANDLE hEnt);

double  CADAPI CadArcGetCenterX    (VHANDLE hEnt);

void    CADAPI CadArcPutCenterX    (VHANDLE hEnt, double X);

double  CADAPI CadArcGetCenterY    (VHANDLE hEnt);

void    CADAPI CadArcPutCenterY    (VHANDLE hEnt, double Y);

double  CADAPI CadArcGetCenterZ    (VHANDLE hEnt);

void    CADAPI CadArcPutCenterZ    (VHANDLE hEnt, double Z);

void    CADAPI CadArcGetCenter     (VHANDLE hEnt, double* pX, double* pY, double* pZ);

void    CADAPI CadArcPutCenter     (VHANDLE hEnt, double X, double Y, double Z);

double  CADAPI CadArcGetRadius     (VHANDLE hEnt);

void    CADAPI CadArcPutRadius     (VHANDLE hEnt, double R);

double  CADAPI CadArcGetRadHor     (VHANDLE hEnt);

void    CADAPI CadArcPutRadHor     (VHANDLE hEnt, double R);

double  CADAPI CadArcGetRadVer     (VHANDLE hEnt);

void    CADAPI CadArcPutRadVer     (VHANDLE hEnt, double R);

double  CADAPI CadArcGetStartAngle (VHANDLE hEnt);

void    CADAPI CadArcPutStartAngle (VHANDLE hEnt, double Ang);

double  CADAPI CadArcGetAngle      (VHANDLE hEnt);

void    CADAPI CadArcPutAngle      (VHANDLE hEnt, double Ang);

double  CADAPI CadArcGetRotAngle   (VHANDLE hEnt);

void    CADAPI CadArcPutRotAngle   (VHANDLE hEnt, double Ang);

BOOL    CADAPI CadArcGetSector     (VHANDLE hEnt);

void    CADAPI CadArcPutSector     (VHANDLE hEnt, BOOL bSector);

void    CADAPI CadArcGetStartPt    (VHANDLE hEnt, double* pX, double* pY, double* pZ);

BOOL    CADAPI CadArcPutStartPt    (VHANDLE hEnt, double X, double Y, double Z);

void    CADAPI CadArcGetEndPt      (VHANDLE hEnt, double* pX, double* pY, double* pZ);

BOOL    CADAPI CadArcPutEndPt      (VHANDLE hEnt, double X, double Y, double Z);

void    CADAPI CadArcGetMidPt      (VHANDLE hEnt, double* pX, double* pY, double* pZ);

BOOL    CADAPI CadArcPutMidPt      (VHANDLE hEnt, double X, double Y, double Z);

void    CADAPI CadArcGet3Pt        (VHANDLE hEnt, double* pXsta, double* pYsta, double* pZ, double* pXmid, double* pYmid, double* pXend, double* pYend);

BOOL    CADAPI CadArcPut3Pt        (VHANDLE hEnt, double Xsta, double Ysta, double Z, double Xmid, double Ymid, double Xe, double Ye);



/******************************************************************************
* POLYLINE
*******************************************************************************/
void    CADAPI CadClearVertices   ();

void    CADAPI CadAddVertex       (double X, double Y, double Z);

void    CADAPI CadAddVertex2      (double X, double Y, double Z, double Prm, double StartW, double EndW);

VHANDLE CADAPI CadAddPolyline     (VDWG hDwg, int FitType, BOOL bClosed);

VHANDLE CADAPI CadAddPolylineW    (VDWG hDwg, int FitType, BOOL bClosed, double Width);

VHANDLE CADAPI CadAddPolygon      (VDWG hDwg, int Color, BOOL bBorder);

BOOL    CADAPI CadPlineInsertVer  (VHANDLE hEnt, UINT iVer);

BOOL    CADAPI CadPlineDeleteVer  (VHANDLE hEnt, UINT iVer);

UINT    CADAPI CadPlineGetNumVers (VHANDLE hEnt);

void    CADAPI CadPlinePutNumVers (VHANDLE hEnt, UINT nVers);

double  CADAPI CadPlineGetX       (VHANDLE hEnt, UINT iVer);

void    CADAPI CadPlinePutX       (VHANDLE hEnt, UINT iVer, double X);

double  CADAPI CadPlineGetY       (VHANDLE hEnt, UINT iVer);

void    CADAPI CadPlinePutY       (VHANDLE hEnt, UINT iVer, double Y);

double  CADAPI CadPlineGetZ       (VHANDLE hEnt, UINT iVer);

void    CADAPI CadPlinePutZ       (VHANDLE hEnt, UINT iVer, double Z);

void    CADAPI CadPlineGetVer     (VHANDLE hEnt, UINT iVer, double* pX, double* pY, double* pZ);

void    CADAPI CadPlinePutVer     (VHANDLE hEnt, UINT iVer, double X, double Y, double Z);

double  CADAPI CadPlineGetPrm     (VHANDLE hEnt, UINT iVer);

void    CADAPI CadPlinePutPrm     (VHANDLE hEnt, UINT iVer, double Prm);

double  CADAPI CadPlineGetStartW  (VHANDLE hEnt, UINT iVer);

void    CADAPI CadPlinePutStartW  (VHANDLE hEnt, UINT iVer, double Width);

double  CADAPI CadPlineGetEndW    (VHANDLE hEnt, UINT iVer);

void    CADAPI CadPlinePutEndW    (VHANDLE hEnt, UINT iVer, double Width);