VS2005/Common/VeCADAPI/CadApi.bas

Public Declare Sub      CadPointPutStyleID Lib "vecad.dll" (ByVal hEnt As Long, ByVal Id As Long)
Public Declare Function CadPointGetX Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPointPutX Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double)
Public Declare Function CadPointGetY Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPointPutY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Function CadPointGetZ Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPointPutZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Sub      CadPointGetCoord Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadPointPutCoord Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadPointGetTextOffset Lib "vecad.dll" (ByVal hEnt As Long, ByVal pDX As Long, ByVal pDY As Long, ByVal pDZ As Long)
Public Declare Sub      CadPointPutTextOffset Lib "vecad.dll" (ByVal hEnt As Long, ByVal DX As Double, ByVal DY As Double, ByVal DZ As Double)
Public Declare Function CadPointGetTextX Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPointPutTextX Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double)
Public Declare Function CadPointGetTextY Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPointPutTextY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Sub      CadPointGetText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As Any)
Public Declare Sub      CadPointPutText Lib "vecad.dll" (ByVal hEnt As Long, ByVal szText As String)
Public Declare Function CadPointGetTextAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPointPutTextAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadPointGetBlockAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadPointPutBlockAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Angle As Double)
Public Declare Function CadAddLine Lib "vecad.dll" (ByVal hDwg As Long, ByVal x1 As Double, ByVal y1 As Double, ByVal z1 As Double, ByVal x2 As Double, ByVal y2 As Double, ByVal z2 As Double) As Long
Public Declare Function CadLineGetX1 Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadLinePutX1 Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double)
Public Declare Function CadLineGetY1 Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadLinePutY1 Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Function CadLineGetZ1 Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadLinePutZ1 Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Function CadLineGetX2 Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadLinePutX2 Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double)
Public Declare Function CadLineGetY2 Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadLinePutY2 Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Function CadLineGetZ2 Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadLinePutZ2 Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Sub      CadLineGetPoint1 Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadLinePutPoint1 Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadLineGetPoint2 Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadLinePutPoint2 Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadAddCircle Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Radius As Double) As Long
Public Declare Function CadAddCircle3P Lib "vecad.dll" (ByVal hDwg As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal Z As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double) As Long
Public Declare Function CadAddArc Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Radius As Double, ByVal StartAngle As Double, ByVal ArcAngle As Double) As Long
Public Declare Function CadAddArc3P Lib "vecad.dll" (ByVal hDwg As Long, ByVal X1 As Double, ByVal Y1 As Double, ByVal Z As Double, ByVal X2 As Double, ByVal Y2 As Double, ByVal X3 As Double, ByVal Y3 As Double) As Long
Public Declare Function CadAddArcCSE Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xc As Double, ByVal Yc As Double, ByVal Z As Double, ByVal Xs As Double, ByVal Ys As Double, ByVal Xe As Double, ByVal Ye As Double, ByVal bCCW As Long) As Long
Public Declare Function CadAddArcSED Lib "vecad.dll" (ByVal hDwg As Long, ByVal Xs As Double, ByVal Ys As Double, ByVal Z As Double, ByVal Xe As Double, ByVal Ye As Double, ByVal DirAngle As Double) As Long
Public Declare Function CadAddArcContinue Lib "vecad.dll" (ByVal hDwg As Long, ByVal hEnt As Long, ByVal Xe As Double, ByVal Ye As Double, ByVal Z As Double) As Long
Public Declare Function CadAddEllipse Lib "vecad.dll" (ByVal hDwg As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal RadH As Double, ByVal RadV As Double, ByVal RotAngle As Double) As Long
Public Declare Function CadArcGetType Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Function CadArcGetCenterX Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutCenterX Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double)
Public Declare Function CadArcGetCenterY Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutCenterY Lib "vecad.dll" (ByVal hEnt As Long, ByVal Y As Double)
Public Declare Function CadArcGetCenterZ Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutCenterZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal Z As Double)
Public Declare Sub      CadArcGetCenter Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadArcPutCenter Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadArcGetRadius Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutRadius Lib "vecad.dll" (ByVal hEnt As Long, ByVal R As Double)
Public Declare Function CadArcGetRadHor Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutRadHor Lib "vecad.dll" (ByVal hEnt As Long, ByVal R As Double)
Public Declare Function CadArcGetRadVer Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutRadVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal R As Double)
Public Declare Function CadArcGetStartAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutStartAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Ang As Double)
Public Declare Function CadArcGetAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Ang As Double)
Public Declare Function CadArcGetRotAngle Lib "vecad.dll" (ByVal hEnt As Long) As Double
Public Declare Sub      CadArcPutRotAngle Lib "vecad.dll" (ByVal hEnt As Long, ByVal Ang As Double)
Public Declare Function CadArcGetSector Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadArcPutSector Lib "vecad.dll" (ByVal hEnt As Long, ByVal bSector As Long)
Public Declare Sub      CadArcGetStartPt Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Function CadArcPutStartPt Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Sub      CadArcGetEndPt Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Function CadArcPutEndPt Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Sub      CadArcGetMidPt Lib "vecad.dll" (ByVal hEnt As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Function CadArcPutMidPt Lib "vecad.dll" (ByVal hEnt As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double) As Long
Public Declare Sub      CadArcGet3Pt Lib "vecad.dll" (ByVal hEnt As Long, ByVal pXsta As Long, ByVal pYsta As Long, ByVal pZ As Long, ByVal pXmid As Long, ByVal pYmid As Long, ByVal pXend As Long, ByVal pYend As Long)
Public Declare Function CadArcPut3Pt Lib "vecad.dll" (ByVal hEnt As Long, ByVal Xsta As Double, ByVal Ysta As Double, ByVal Z As Double, ByVal Xmid As Double, ByVal Ymid As Double, ByVal Xe As Double, ByVal Ye As Double) As Long
Public Declare Sub      CadClearVertices Lib "vecad.dll" ()
Public Declare Sub      CadAddVertex Lib "vecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Sub      CadAddVertex2 Lib "vecad.dll" (ByVal X As Double, ByVal Y As Double, ByVal Z As Double, ByVal Prm As Double, ByVal StartW As Double, ByVal EndW As Double)
Public Declare Function CadAddPolyline Lib "vecad.dll" (ByVal hDwg As Long, ByVal FitType As Long, ByVal bClosed As Long) As Long
Public Declare Function CadAddPolylineW Lib "vecad.dll" (ByVal hDwg As Long, ByVal FitType As Long, ByVal bClosed As Long, ByVal Width As Double) As Long
Public Declare Function CadAddPolygon Lib "vecad.dll" (ByVal hDwg As Long, ByVal Color As Long, ByVal bBorder As Long) As Long
Public Declare Function CadPlineInsertVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Long
Public Declare Function CadPlineDeleteVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Long
Public Declare Function CadPlineGetNumVers Lib "vecad.dll" (ByVal hEnt As Long) As Long
Public Declare Sub      CadPlinePutNumVers Lib "vecad.dll" (ByVal hEnt As Long, ByVal nVers As Long)
Public Declare Function CadPlineGetX Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Double
Public Declare Sub      CadPlinePutX Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal X As Double)
Public Declare Function CadPlineGetY Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Double
Public Declare Sub      CadPlinePutY Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal Y As Double)
Public Declare Function CadPlineGetZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Double
Public Declare Sub      CadPlinePutZ Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal Z As Double)
Public Declare Sub      CadPlineGetVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal pX As Long, ByVal pY As Long, ByVal pZ As Long)
Public Declare Sub      CadPlinePutVer Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal X As Double, ByVal Y As Double, ByVal Z As Double)
Public Declare Function CadPlineGetPrm Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Double
Public Declare Sub      CadPlinePutPrm Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal Prm As Double)
Public Declare Function CadPlineGetStartW Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Double
Public Declare Sub      CadPlinePutStartW Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal Width As Double)
Public Declare Function CadPlineGetEndW Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long) As Double
Public Declare Sub      CadPlinePutEndW Lib "vecad.dll" (ByVal hEnt As Long, ByVal iVer As Long, ByVal Width As Double)
